--- a/index.html
+++ b/index.html
@@ -30,20 +30,19 @@
           </tbody>
         </table>
 
-        <h3 id="display-total">Total: $0.00</h3>
+        <h4 id="display-total">Total: $0.00</h4>
 
         <h3 class="text-center">Add itens</h3>
-        <table class="table">
-          <tbody>
-            <tr>
-              <td><input type="item" class="form-control" id="item" placeholder="item"></td>
-              <td><input type="quantity" class="form-control" id="quantity" placeholder="quantity"></td>
-              <td><input type="price" class="form-control" id="price" placeholder="price"></td>
-              <td><button type="submit" class="btn btn-success" onclick="toList();">to list!</button></td>
-              <td><button type="submit" class="btn btn-danger">delete selected</button></td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="inputs">
+          <input type="item" class="form-control" id="item" placeholder="item">
+          <input type="quantity" class="form-control" id="quantity" placeholder="quantity">
+          <input type="price" class="form-control" id="price" placeholder="price">
+        </div>
+
+        <div class="buttons">
+          <button type="submit" class="btn btn-success btn-block" onclick="toList();">Add to list!</button>
+          <!-- <button type="submit" class="btn btn-danger btn-block">delete selected</button> -->
+        </div>
 
       </div>
     </div>
