--- a/index.html
+++ b/index.html
@@ -11,13 +11,27 @@
   </head>
   <body>
 
-    <div class="container">
-      <div class="row">
-        <div class="title col-xs-12">
-          <h2 class="text-center">Shopping List</h2>
+    <nav class="navbar navbar-inverse navbar-static-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Shopping list</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="https://github.com/OdineiRibeiro/shopping-list" target="_blank">See me on Github</a></li>
+          </ul>
         </div>
       </div>
+    </nav>
 
+    <div class="container">
       <div class="row">
         <div class="table col-xs-12">
           <table class="table table-condensed" id="table-shoplist">
