--- a/index.html
+++ b/index.html
@@ -11,45 +11,67 @@
   </head>
   <body>
 
+    <nav class="navbar navbar-inverse navbar-static-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Shopping list</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="https://github.com/OdineiRibeiro/shopping-list" target="_blank">See me on Github</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="container">
-      <div class="list">
-        <h2 class="text-center">Shopping List</h2>
-
-        <table class="table table-condensed" id="table-shoplist">
-          <thead>
-            <tr>
-              <th> </th>
-              <th>Item</th>
-              <th>Quantity</th>
-              <th>Price</th>
-              <th>Total</th>
-              <th> </th>
-              <th> </th>
-            </tr>
-          </thead>
-          <tbody>
-          </tbody>
-        </table>
-
-        <h4 id="display-total">Total: $0.00</h4>
-
-        <h3 class="text-center">Add itens</h3>
-        <div class="inputs">
-          <input type="item" class="form-control" id="item" placeholder="item">
-          <input type="quantity" class="form-control" id="quantity" placeholder="quantity">
-          <input type="price" class="form-control" id="price" placeholder="price">
+      <div class="row">
+        <div class="table col-xs-12">
+          <table class="table table-condensed" id="table-shoplist">
+            <thead>
+              <tr>
+                <th class="text-center col-xs-5">Item</th>
+                <th class="text-center col-xs-1">Quantity</th>
+                <th class="text-center col-xs-2">Price</th>
+                <th class="text-center col-xs-2">Total</th>
+                <th class="text-center col-xs-1"> </th>
+                <th class="text-center col-xs-1"> </th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
         </div>
-
-        <div class="buttons">
-          <button type="submit" class="btn btn-success btn-block" onclick="toList();">Add to list!</button>
-          <!-- <button type="submit" class="btn btn-danger btn-block">delete selected</button> -->
-        </div>
-
       </div>
 
-      <div class="github-image">
-        <a href="https://github.com/OdineiRibeiro/shopping-list"><img class="img-responsive center-block" src="images/github-icon.png" alt="Fork me on GitHub"></a>
+      <div class="row">
+        <div class="col-xs-12">
+          <h4 id="display-total">Total: $0.00</h4>
+        </div>
       </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <h3 class="text-center">Add itens</h3>
+          <div class="inputs">
+            <input type="item" class="form-control" id="item" placeholder="item">
+            <input type="quantity" class="form-control" id="quantity" placeholder="quantity">
+            <input type="price" class="form-control" id="price" placeholder="price">
+          </div>
+
+          <div class="buttons">
+            <button type="submit" class="btn btn-success btn-block" onclick="toList();">Add to list!</button>
+          </div>
+        </div>
+      </div>
+
     </div>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
